--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_swiper_view: ^1.1.8
   json_annotation: ^4.2.0
   http: ^0.13.5
+  flutter_webview_plugin: ^0.4.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
