--- a/.gitignore
+++ b/.gitignore
@@ -147,5 +147,6 @@ output.json
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
 # End of https://www.gitignore.io/api/android,flutter
-
+/build
+build
 build/
