--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   json_annotation: ^4.2.0
   http: ^0.13.5
   flutter_webview_plugin: ^0.4.0
+#  flutter_staggered_grid_view: ^0.6.0
+  flutter_staggered_grid_view: ^0.4.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
